--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <body>
      <head> 
          <h1>Vegetables</h1> 
-         <link href="css-hw1.css" type="text/css" rel="stylesheet">
+         <link href="style.css" type="text/css" rel="stylesheet">
 
          <div class="buttons">
           <div class="icon">
